--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keyword"
+      content="AR, VR, XR, TSPXR, XR fit, XR Universe, 공간의파티, 공파, TSP XR, TSP, thespatialparty"
+    />
+    <meta name="description" content="웹 기반 디지털 트윈 전문기업" />
+    <meta name="og:site_name" content="공간의파티" />
+    <meta name="og:title" content="공간의파티" />
+    <meta name="og:description" content="웹 기반 디지털 트윈 전문기업" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="" />
+    <meta name="og:image" content="./src/assets/image/logo/image.png" />
     <title>공간의파티</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
