Feat: 메타태그 수정, 뉴스 데이터 추가

--- a/index.html
+++ b/index.html
@@ -13,12 +13,27 @@
     <meta name="og:title" content="공간의파티" />
     <meta name="og:description" content="웹 기반 디지털 트윈 전문기업" />
     <meta name="og:type" content="website" />
-    <meta name="og:url" content="" />
-    <meta name="og:image" content="./src/assets/image/logo/image.png" />
+    <meta name="og:url" content="https://tsp-xr.com/" />
+    <meta name="og:image" content="/mataImg.jpg" />
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="공간의파티" />
+    <meta itemprop="description" content="웹 기반 디지털 트윈 전문기업" />
+    <meta itemprop="image" content="/mataImg.jpg" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://tsp-xr.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="공간의파티" />
+    <meta property="og:description" content="웹 기반 디지털 트윈 전문기업" />
+    <meta property="og:image" content="/mataImg.jpg" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="/mataImg.jpg" />
+    <meta name="twitter:title" content="공간의파티" />
+    <meta name="twitter:description" content="웹 기반 디지털 트윈 전문기업" />
+    <meta name="twitter:image" content="/mataImg.jpg" />
     <title>공간의파티</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/entry-client.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
