Feat: 로딩페이지 수정

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keyword"
-      content="AR, VR, XR, TSPXR, XR fit, XR Universe, 공간의파티, 공파, TSP XR, TSP, thespatialparty"
+      content="AR, VR, XR, TSPXR, XR fit, XR Universe, 공간의파티, 공파, TSP XR, TSP, thespatialparty, 디지털트윈, 디지털 트윈"
     />
     <meta name="description" content="웹 기반 디지털 트윈 전문기업" />
     <meta name="og:site_name" content="공간의파티" />
