--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <meta name="og:description" content="웹 기반 디지털 트윈 전문기업" />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://tsp-xr.com/" />
-    <meta name="og:image" content="/metaImg.png" />
+    <meta name="og:image" content="/favicon.png" />
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="공간의파티" />
     <meta itemprop="description" content="웹 기반 디지털 트윈 전문기업" />
-    <meta itemprop="image" content="/metaImg.png" />
+    <meta itemprop="image" content="/favicon.png" />
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://tsp-xr.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="공간의파티" />
     <meta property="og:description" content="웹 기반 디지털 트윈 전문기업" />
-    <meta property="og:image" content="/metaImg.png" />
+    <meta property="og:image" content="/favicon.png" />
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="/metaImg.png" />
+    <meta name="twitter:card" content="/favicon.png" />
     <meta name="twitter:title" content="공간의파티" />
     <meta name="twitter:description" content="웹 기반 디지털 트윈 전문기업" />
-    <meta name="twitter:image" content="/metaImg.png" />
+    <meta name="twitter:image" content="/favicon.png" />
     <title>공간의파티</title>
   </head>
   <body>
